<resources>

    <string name="app_name">Cocktail Recipes</string>

    <string name="bottom_navigation_search">Search</string>
    <string name="bottom_navigation_favourites">Favourites</string>
    <string name="bottom_navigation_shopping_list">Shopping List</string>
    <string name="bottom_navigation_add_recipe">Add Recipe</string>
    <string name="drawer_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="openDrawerContentDescRes">Open drawer</string>
    <string name="closeDrawerContentDescRes">Close drawer</string>
    <string name="add_recipe_fragment_confirm">Confirm</string>
    <string name="add_recipe_title">Add Recipe</string>
    <string name="description_recipe_photo">recipe photo</string>
    <string name="recipe_name_hint">Name</string>
    <string name="recipe_instructions_hint">Instructions</string>
    <string name="search_title">Search</string>
    <string name="add_to_favourites">Add to favourites</string>
    <string name="name_header">Name</string>
    <string name="instructions_header">Instructions</string>
    <string name="commentary_header">Commentary</string>
    <string name="abv_header">ABV:</string>
    <string name="alcoholic_header">Alcoholic:</string>
    <string name="description_header">Description</string>
    <string name="alcoholic">" "%s</string>
    <string name="abv">" "%s%%</string>
    <string name="add_commentary">add commentary</string>
    <string name="insert_commentary">Add commentary</string>
    <string name="item_range">%.0f-%.0f</string>
    <string name="default_counter_value">1</string>
    <string name="search">Search</string>
    <string name="search_hint">Search</string>
    <string name="random_header">Random</string>
    <string name="popular_header">Popular</string>
    <string name="search_header">Search</string>
    <string name="search_by_drink_name_chip">By drink Name</string>
    <string name="search_by_ingredient_name_chip">By ingredient name</string>
    <string name="favourites_fragment_title">Favourites</string>
    <string name="to_shopping_list">To shopping list</string>
    <string name="shopping_list_activity_name">Shopping List</string>
    <string name="shopping_list_item">Item</string>
    <string name="shopping_list_amount">Amount</string>

</resources>