<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".search.SearchFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/search_fragment_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/search_results_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_header"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_fragment_container" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_cocktails_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_results_header" />

        <TextView
            android:id="@+id/random_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/random_header"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_cocktails_recycler_view" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/horizontal_random_cocktails_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/random_header" />

        <TextView
            android:id="@+id/popular_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/popular_header"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontal_random_cocktails_recycler" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/horizontal_popular_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/popular_header" />

<!--        <TextView-->
<!--            android:id="@+id/recent_header"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Recent"-->
<!--            android:textSize="18sp"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/horizontal_popular_recycler" />-->

<!--        <androidx.recyclerview.widget.RecyclerView-->
<!--            android:id="@+id/recent_recycler"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/recent_header" />-->


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>